<resources>
    <string name="app_name">EasyQuizy</string>
    <string name="credit">© EasyQuizy ©</string>
    <string name="enter">Enter</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>

    <string name="sex">Sex:</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="unknown_sex">Not Specified</string>

    <string name="rate">Rate This App</string>
    <string name="rating_tnx">Thanks for rating us!</string>
    <string name="starts">Stars</string>

    <string name="wlcm_str">Welcome</string>
    <string name="title_activity_topics_select">TopicsSelectActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="math">Math</string>
    <string name="hp">Harry Potter</string>
    <string name="countries">Countries</string>
    <string name="food">Food</string>

    <string-array name="Categories">
        <item> @string/math </item>
        <item> @string/hp </item>
        <item> @string/countries </item>
        <item> @string/food </item>
    </string-array>

    <string name="already_signed">Already signed up?</string>
    <string name="login_now">Log In Now</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="enter_mail">example@gmail.com</string>
    <string name="pass_hint">Enter Password Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="topics">Topics</string>
    <string name="Email">Email</string>
    <string name="enter_email">Please enter email!</string>
    <string name="enter_pass">Please enter password!</string>
    <string name="enter_name">Please enter name!</string>
    <string name="enter_age">Please enter age!</string>
    <string name="pass_short">your password is too short!!! you need at least 6 digits!</string>
    <string name="register_succeeded">register succeeded!!!</string>
    <string name="register_failed">Register failed</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_using_email">sign in with your email</string>
    <string name="login_failed">Login failed</string>
    <string name="cancel">CANCEL</string>
    <string name="choose">Choose</string>
    <string name="game_type">Game Type</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="play">Play</string>
    <string name="write_yr_name">Write your name here</string>
    <string name="write_age">Write your age here</string>
    <string name="choose_sex">Please choose your gender</string>
    <string name="or_choose">Or Choose</string>
    <string name="random_opponent">Random Opponent</string>
    <string name="random_player">Random Player</string>
    <string name="rate_topic">Rate This Topic</string>
    <string name="single_player">Single Player</string>
    <string name="specific_opponent">Specific Opponent</string>


    <string-array name="choose_players_arr">
        <item>@string/select_specific_opponent</item>
        <item>@string/specific_opponent</item>
        <item>@string/specific_opponent</item>
        <item>@string/specific_opponent</item>
    </string-array>
    <string name="shani">Shani</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_topic_start">TopicStartActivity</string>
    <string name="select_specific_opponent">select opponent</string>
    <string name="quit_game">Quit Game</string>
    <string name="enter_ans">Enter Answer</string>
    <string name="score_board">Score Board</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="good_job">Good  Job</string>
    <string name="play_another">Play Another</string>
    <string name="back_to_topics">Back To Topics</string>
    <string name="username">Username</string>
    <string name="topic">Topic</string>
    <string name="score">Score</string>
    <string name="ur_score_is">Your score is :</string>
    <string name="succeeded">Succeeded :</string>
    <string name="next_time">next time</string>
    <string name="wlcm_back">Welcome back</string>
    <string name="life">Life</string>
    <string name="online_channel_desc">go ahead and play online for more categories and more questions and hours of fun</string>
    <string name="category_channel_desc">stay updated for new categories for more hours of fun</string>
    <string name="Login_Successfully">Login Successfully!</string>
    <string name="pased">PASSED</string>
    <string name="point_earn">You\'ve earned points. Sure you want to leave?</string>

</resources>
