<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_bg">


        <!-- Header aligned to top -->
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <!-- <TextView
                 android:id="@+id/title_ly"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/wlcm_str"
                 android:textColor="@color/text_color_secondary"
                /> -->

        </RelativeLayout>

        <!-- Footer aligned to bottom -->
        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <TextView
                android:id="@+id/credits_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:textColor="@color/colorPrimaryDarkBlack"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/main_frame_ly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/footer"
            android:layout_below="@id/header"
            android:gravity="center"

            android:layout_marginTop="90dp"
            android:layout_marginBottom="120dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/white_50precent"

            android:paddingStart="30dp"
            >

            <TextView
                android:id="@+id/name_entering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/text_color_secondary"
                />
            <EditText
                android:id="@+id/name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="write your name here"
                android:inputType="textPersonName"
                android:layout_below="@id/name_entering"

                android:layout_marginTop="20dp"
                android:imeOptions="actionSend"
                android:textColor="@color/colorPrimaryDarkBlack"
                android:textColorHint="@color/colorPrimaryDarkBlack"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/age_entering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/text_color_secondary"
                android:layout_below="@+id/name_et"
                />
            <EditText
                android:id="@+id/age_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="write your age here"
                android:inputType="textPersonName"
                android:layout_below="@id/age_entering"

                android:layout_marginTop="20dp"
                android:imeOptions="actionSend"
                android:textColor="@color/colorPrimaryDarkBlack"
                android:textColorHint="@color/colorPrimaryDarkBlack"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/gender_entering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/text_color_secondary"
                android:layout_below="@id/age_et"
                />

            <RadioGroup
                android:id="@+id/sexRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gender_entering"
                android:layout_marginBottom="10dp"
                >

                <RadioButton
                    android:id="@+id/male_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/male"
                    android:textColor="@color/text_color_secondary"/>

                <RadioButton
                    android:id="@+id/female_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/female"
                    android:textColor="@color/text_color_secondary"/>

                <RadioButton
                    android:id="@+id/unknown_sex_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/unknown_sex"
                    android:textColor="@color/text_color_secondary"
                    android:checked="true"/>
            </RadioGroup>


            <RelativeLayout
                android:id="@+id/name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:layout_marginTop="340dp"

                >
                <!-- android:background="@color/white_50precent" -->
                <Button
                    android:id="@+id/enter_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:paddingStart="100dp"
                    android:paddingLeft="100dp"
                    android:paddingEnd="100dp"
                    android:paddingRight="100dp"

                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"

                    android:background="@drawable/button_bg_rounded_corners"
                    android:text="@string/enter"
                    android:textColor="@color/text_color_thirdly" />
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>