<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoosePlayerActivity">


    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_bg">


        <!-- Header aligned to top -->
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <!-- <TextView
                 android:id="@+id/title_ly"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/wlcm_str"
                 android:textColor="@color/text_color_secondary"
                /> -->

        </RelativeLayout>

        <!-- Footer aligned to bottom -->
        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <!--
            <TextView
                android:id="@+id/credits_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:textColor="@color/colorPrimaryDarkBlack"/>
                -->

        </RelativeLayout>

        <!-- Main between footer & bottom -->
        <ScrollView
            android:id="@+id/main_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/footer"
            android:layout_below="@id/header"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"

            android:background="@color/white_50percent"

            android:gravity="center"
            >

            <!-- /////////////////////////////////////////////// -->
            <RelativeLayout
                android:id="@+id/main_frame_ly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="30dp"
                >

                <LinearLayout
                    android:id="@+id/btns_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal"
                    android:weightSum="2"
                    >

                    <Button
                        android:id="@+id/single_player_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="5dp"

                        android:background="@drawable/button_bg_rounded_corners"

                        android:paddingStart="40dp"
                        android:paddingRight="40dp"

                        android:paddingLeft="40dp"
                        android:paddingEnd="40dp"

                        android:text="@string/single_player"
                        android:textColor="@color/text_color_thirdly"

                        android:layout_weight="1"
                        />

                    <Button
                        android:id="@+id/random_player_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="5dp"

                        android:background="@drawable/button_bg_rounded_corners"

                        android:paddingStart="40dp"
                        android:paddingRight="40dp"

                        android:paddingLeft="40dp"
                        android:paddingEnd="40dp"

                        android:text="@string/random_opponent"
                        android:textColor="@color/text_color_thirdly"

                        android:layout_weight="1"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/choose_player_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical"
                    android:layout_below="@id/btns_ly"
                    >

                    <TextView
                        android:id="@+id/choose_player_txt"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/or_choose"

                        android:textSize="20sp"

                        android:textColor="@color/text_color_secondary"

                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        />

                    <Spinner
                        android:id="@+id/players_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"

                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="26dp"
                        android:layout_marginRight="26dp"

                        android:entries="@array/choose_players_arr"

                        android:layout_below="@id/choose_player_txt"
                        />




                </LinearLayout>


            </RelativeLayout>
            <!-- /////////////////////////////////////////////// -->
        </ScrollView>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>